<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="10dp"
    android:paddingEnd="10dp"
    tools:context=".AddItem">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            >
            <TextView
                android:id="@+id/txtItemPhotos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Item Photos"
                android:textSize="20sp"
                android:textColor="@color/black"
                />
            <RelativeLayout
                android:id="@+id/itemImageContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtItemPhotos"
                >
                <ImageView
                    android:id="@+id/itemImage1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/add_white_24dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/slightWhite"
                    />
                <ImageView
                    android:id="@+id/itemImage2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@drawable/add_white_24dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/slightWhite"
                    android:layout_toEndOf="@id/itemImage1"
                    android:layout_marginStart="15dp"
                    android:visibility="invisible"
                    />
            </RelativeLayout>
          <!--  <TextView
                android:id="@+id/txtPrompt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:layout_below="@id/itemImageContainer"
                android:text="Can't upload gallery image at the moment due to unforseen server errors."
                />
            <EditText
                android:id="@+id/textImageURL"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtPrompt"
                android:layout_marginTop="10dp"
                android:hint="RAW IMAGE URL HERE"
                android:textSize="16sp"
                android:maxLines="2"
                />-->

            <EditText
                android:id="@+id/textItemTitle"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/itemImageContainer"
                android:layout_marginTop="10dp"
                android:hint="@string/item_title"
                android:textSize="16sp"
                android:maxLines="1"
                />
            <EditText
                android:id="@+id/textDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textItemTitle"
                android:layout_marginTop="10dp"
                android:hint="@string/description"
                android:textSize="16sp"
                android:lines="2"
                />
            <EditText
                android:id="@+id/textItemPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textDescription"
                android:layout_marginTop="10dp"
                android:hint="@string/price"
                android:textSize="16sp"
                android:inputType="numberDecimal"
                />
            <TextView
                android:id="@+id/txtInfoPrice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/textItemPrice"
                android:text="The currency is in Philipine Peso."
                android:textSize="10sp"
                />
            <Button
                android:id="@+id/btnSubmitItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtInfoPrice"
                android:layout_marginTop="10dp"
                android:background="@color/diaraDefault"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:text="Confirm Listing"
                android:textSize="18sp"
                android:padding="15dp"
                />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>